# discord-music-bot

./: .containerignore  .env-example  .gitignore  Containerfile  LICENSE  README.md  pyproject.toml
discord_music_bot/: __main__.py  bot.py  player.py  tree.py
discord_music_bot/plugins/: music.py
src/discord_music_bot/: __main__.py  bot.py
